--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -14,7 +14,7 @@ title=Federasyon Oyuncu Raporu
 panelHeader=Seçim Parametreleri
 
 #XTIT
-listHeader=Liste
+listHeader=Sporcular
 
 #XTIT
 sprid=Sporcu ID
@@ -48,6 +48,9 @@ footu=Kullandığı Ayak
 
 #XTIT
 value=Değer
+
+#XTIT
+detail=Detay
 
 #XTIT
 show=Göster
