--- a/webapp/i18n/i18n_en.properties
+++ b/webapp/i18n/i18n_en.properties
@@ -10,7 +10,7 @@ title=Federation Player Report
 panelHeader=Selection Parameters
 
 #XTIT
-listHeader=List
+listHeader=Sportsmens
 
 #XTIT
 sprid=Sportsmen ID
@@ -44,6 +44,9 @@ footu=Foot Use
 
 #XTIT
 value=Value
+
+#XTIT
+detail=Detail
 
 #XTIT
 show=Show
